--- a/plantw.html
+++ b/plantw.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Rayhan Ajisaka</title>
+
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;400;900&display=swap" rel="stylesheet" />
+
+        <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
+</head>
+
+<body class="blue bottom">
+        
+        <div class="title">
+                <a href="index.html">Back to main page</a>  
+                <h1>Self-Watering Plant System</h1>
+
+                <p><img src="apadeh.jpg" alt="apadeh" width="50%" margin-left="30%"></p>
+                
+                <p>I had the opportunity to choose any project of my liking using Arduino Uno. I created a self-watering plant system which adds water directly to the soil every time the moisture level is low.</p>
+                <p>The system was created using moisture sensor to determine the soil moisture level and would send those values into Arduino Uno. If watering is necessary, Arduino would send signal to the pump motor controller thus activating the pump delivering water directly to the soil.</p>
+            </div>
+
+        <section class="bottom"></section>
+    </body>
+
 
