--- a/400.html
+++ b/400.html
@@ -18,7 +18,7 @@
         
         <div class="title">
                 <a href="index.html">Back to main page</a>  
-                <h1>E-Bike Pedal Assist Conversion Kit</h1>
+                <h1>Motorized Data-Aqcuisiton Cart</h1>
                 <p>As my Capstone project, my team was sponsored by VME, often known as Volunteers of Medical Engineering, and were assigned a young client with spinalve is to i disability. The objective is to convert our client's personalized trike, which was created by the previous capstone team, and implement a motor-assisted pedal. Our client has been satisfied with the personalized trike, however, they expressed their struggles to pedal on an incline due to restricted physical movements. My team - consist of James Allen, Diego Ferreira, Kevin Holtman and Sachitch Seneviratne had to come up with a system that help assist them pedaling without taking away the fun and exercise aspect of biking experience.</p>
         </div>
             
