--- a/Capstone.html
+++ b/Capstone.html
@@ -23,7 +23,7 @@
         </div>
             
         <div class="sketchfab-embed-wrapper" style="width: 80%; margin: 0 auto;"> 
-                <iframe title="Assm_ v23" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share style="width: 100%; height: 500px;" src="https://sketchfab.com/models/120d8ed48e5c4adc8f1ea543abed49d0/embed?autospin=1&autostart=1"> </iframe> 
+                <iframe title="E-Trike" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share style="width: 100%; height: 500px;" src="https://sketchfab.com/models/120d8ed48e5c4adc8f1ea543abed49d0/embed?autospin=1&autostart=1"> </iframe> 
                 <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
                         <a href="https://sketchfab.com/3d-models/trike-pedal-assist-conversion-c1c821fe0f8e429190bfd48fdef3bcf5" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Assm_ v23 </a> by 
                         <a href="https://sketchfab.com/ajisakarayhan?utm_medium=embed&utm_campaign=share-popup&utm_content=120d8ed48e5c4adc8f1ea543abed49d0" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Ajisakarayhan </a> on 
