--- a/Capstone.html
+++ b/Capstone.html
@@ -21,6 +21,14 @@
                 <h1>E-Bike Pedal Assist Conversion Kit</h1>
                 <p>As my Capstone project, my team was sponsored by VME, often known as Volunteers of Medical Engineering, and were assigned a young client with spinalve is to i disability. The objective is to convert our client's personalized trike, which was created by the previous capstone team, and implement a motor-assisted pedal. Our client has been satisfied with the personalized trike, however, they expressed their struggles to pedal on an incline due to restricted physical movements. My team - consist of James Allen, Diego Ferreira, Kevin Holtman and Sachitch Seneviratne had to come up with a system that help assist them pedaling without taking away the fun and exercise aspect of biking experience.</p>
         </div>
+    
+    <div class="sketchfab-embed-wrapper" style="width: 80%; margin: 0 auto;"> 
+                <iframe title="Trike Pedal Assist Conversion" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/c1c821fe0f8e429190bfd48fdef3bcf5/embed?ui_theme=dark"> </iframe> 
+                <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #040c0f;"> 
+                        <a href="https://sketchfab.com/3d-models/trike-pedal-assist-conversion-c1c821fe0f8e429190bfd48fdef3bcf5" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Assm_ v23 </a> by 
+                        <a href="https://sketchfab.com/ajisakarayhan?utm_medium=embed&utm_campaign=share-popup&utm_content=120d8ed48e5c4adc8f1ea543abed49d0" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Ajisakarayhan </a> on 
+                        <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=120d8ed48e5c4adc8f1ea543abed49d0" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+        </div>
 
         <h3>Our Solution</h3>
 
