--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <div class="title">
       <section>
-        <h1>Hello World!</h1>
-        <p>By<a href="https://www.linkedin.com/in/rayhan-ajisaka/">Rayhan Ajisaka</a></p>
+        <h1>Rayhan Ajisaka</h1>
+        <p>By<a href="https://www.linkedin.com/in/rayhan-ajisaka/">Ajisaka</a></p>
         
       </section>
       
@@ -45,10 +45,7 @@
           I was born in Japan and spent my first 16 years in Indonesia before I moved to the United States. In May 2023, I completed my Bachelor's degree in Mechanical Engineering. Most of my experience comes from academic tasks and personal initiatives, such as creating my own desktop system. Some of these projects can be viewed below, While I could only provide brief informations, I would be glad to provide additional insights if required.
         </p>
         <p>
-          I took interest in math early in my school days, and since I have a curious personality, I become fascinated by technology and always looking to contribute for the better.
-        </p>
-        <p>
-          Currently, I am looking for opportunities to apply and expand these skills. To learn more about my experience and journey, visit my<a href = "https://www.linkedin.com/in/rayhan-ajisaka/">LinkedIn</a>
+          I took interest in math early in my school days, and since I have a curious personality, I become fascinated by technology and always looking to contribute for the better. Currently, I am looking for opportunities to apply and expand these skills. To learn more about my experience and journey, visit my<a href = "https://www.linkedin.com/in/rayhan-ajisaka/">LinkedIn</a>
         </p>
         <p><a href="resume.html">Experience and Skills</a></p>
     </section>
@@ -64,6 +61,7 @@
     </section>
 
     <!-- Contact Section -->
+    <section class="blue">
         <h1>Send me a message!</h1>
         <p><a href = "mailto: ajisakarayhan@gmail.com?subject = Feedback&body = Message">Email</a></p>
         <p><a href = "https://www.linkedin.com/in/rayhan-ajisaka/">LinkedIn</a></p>
