--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- My projects section-->
     <section class="blue">
       <h2>Projects</h2>
-      <a href="capstone.html">My Capstone Project</a>
+      <a href="Capstone.html">My Capstone Project</a>
       <a href="chipset.html">Smartphone Chipset Deconstruction</a>
       <a href="400.html">Motorized Data-Aqcuisition cart</a>
       <a href="plantw.html">Self-Watering Plant System</a>
