--- a/400.html
+++ b/400.html
@@ -19,16 +19,7 @@
         <div class="title">
                 <a href="index.html">Back to main page</a>  
                 <h1>Motorized Data-Aqcuisiton Cart</h1>
-                <p>As my Capstone project, my team was sponsored by VME, often known as Volunteers of Medical Engineering, and were assigned a young client with spinalve is to i disability. The objective is to convert our client's personalized trike, which was created by the previous capstone team, and implement a motor-assisted pedal. Our client has been satisfied with the personalized trike, however, they expressed their struggles to pedal on an incline due to restricted physical movements. My team - consist of James Allen, Diego Ferreira, Kevin Holtman and Sachitch Seneviratne had to come up with a system that help assist them pedaling without taking away the fun and exercise aspect of biking experience.</p>
-        </div>
-            
-        <div class="sketchfab-embed-wrapper" style="width: 80%; margin: 0 auto;"> 
-                <iframe title="Assm_ v23" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share style="width: 100%; height: 500px;" src="https://sketchfab.com/models/120d8ed48e5c4adc8f1ea543abed49d0/embed?autospin=1&autostart=1"> </iframe> 
-                <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
-                        <a href="https://sketchfab.com/3d-models/cart2-3ecc7982553d4d4db970b6fe57b41ded" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Assm_ v23 </a> by 
-                        <a href="https://sketchfab.com/ajisakarayhan?utm_medium=embed&utm_campaign=share-popup&utm_content=120d8ed48e5c4adc8f1ea543abed49d0" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Ajisakarayhan </a> on 
-                        <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=120d8ed48e5c4adc8f1ea543abed49d0" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-                </p>
+                <p>As a project for my Machine Design course, I was tasked to design a motorized data-aqcuisition cart. Since the design should consider any surfaces such as the moon, some specifications are restricted thus bringing the best out of each teams' creativity. My team, consists of Andrew Romero, Ben Fong, and Bryan Roeper proposed such design.</p>
         </div>
 
         <h3>Our Solution</h3>
