--- a/Capstone.html
+++ b/Capstone.html
@@ -16,13 +16,15 @@
 
 <body class="blue bottom">
         
-        <div class="title">
+        <div class="header">
                 <a href="index.html">Back to main page</a>  
                 <h1>E-Bike Pedal Assist Conversion Kit</h1>
                 <p>As my Capstone project, my team was sponsored by VME, often known as Volunteers of Medical Engineering, and were assigned a young client with spinalve is to i disability. The objective is to convert our client's personalized trike, which was created by the previous capstone team, and implement a motor-assisted pedal. Our client has been satisfied with the personalized trike, however, they expressed their struggles to pedal on an incline due to restricted physical movements. My team - consist of James Allen, Diego Ferreira, Kevin Holtman and Sachitch Seneviratne had to come up with a system that help assist them pedaling without taking away the fun and exercise aspect of biking experience.</p>
         </div>
 
         <h3>Our Solution</h3>
+
+        <div class="sketchfab-embed-wrapper"> <iframe title="Trike Pedal Assist Conversion" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/c1c821fe0f8e429190bfd48fdef3bcf5/embed?ui_theme=dark"> </iframe> </div>
 
         <p><img src="cdiagram.JPG" alt="cdiagram" width="45%" margin-left="30%"></p>
 
