--- a/400.html
+++ b/400.html
@@ -25,6 +25,14 @@
 
         <h3>Our Design</h3>
 
+        <div class="sketchfab-embed-wrapper"> <iframe title="cart2" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/3ecc7982553d4d4db970b6fe57b41ded/embed?ui_theme=dark"> </iframe> 
+                <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
+                        <a href="https://sketchfab.com/3d-models/cart2-3ecc7982553d4d4db970b6fe57b41ded" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Data-Aqcuisition Cart </a> by 
+                        <a href="https://sketchfab.com/ajisakarayhan" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> ajisakarayhan </a> on 
+                        <a href="https://sketchfab.com/feed" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+                </p>
+        </div>
+
         <p>We came up with a design consists of 2 motors, 2 gearboxes, 4 individual drive axles and 4 belts driven.</p>
 
         <p>Although due to complexity and the lack of time available in a semester, we did not get to visualize our design with a prototype. It was a challenging yet fun project and I personally believe it would be better if the students have 2 semesters working on this project for prototype development.</p>
