--- a/chipset.html
+++ b/chipset.html
@@ -16,7 +16,7 @@
 
 <body>
         
-        <div class="header">
+        <div class="title">
                 <a href="index.html">Back to main page</a> 
                 <h1>Smartphone Chipset Deconstruction</h1>    
             </div>
