--- a/resume.html
+++ b/resume.html
@@ -32,5 +32,5 @@
         <p>Interested? Click<a href="mailto: ajisakarayhan@gmail.com?subject = Feedback&body = Message">here</a></p>
 
 
-        <section class="bottom"></section>
+        <section class="blue"></section>
     </body>
