--- a/Capstone.html
+++ b/Capstone.html
@@ -24,7 +24,7 @@
 
         <h3>Our Solution</h3>
 
-        <div class="sketchfab-embed-wrapper" style="width: 150%; margin: auto;"> 
+        <div class="sketchfab-embed-wrapper" width="150%" margin-left="30%"> 
                 <iframe title="Trike Pedal Assist Conversion" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/c1c821fe0f8e429190bfd48fdef3bcf5/embed?ui_theme=dark"> </iframe> 
                 <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
                         <a href="https://sketchfab.com/3d-models/trike-pedal-assist-conversion-c1c821fe0f8e429190bfd48fdef3bcf5" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Converted Trike </a> by 
