--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </section>
 
     <!-- Contact Section -->
+    <section class="blue">
     <div class="blob-content">
         <h1>Send me a message!</h1>
         <p><a href = "mailto: ajisakarayhan@gmail.com?subject = Feedback&body = Message">Email</a></p>
@@ -104,8 +105,8 @@
         ).start();
       </script>
 
+      </section>
+
   </body>
 
-  <section class="blue"></section>
-  
 </html>
