--- a/400.html
+++ b/400.html
@@ -25,7 +25,8 @@
 
         <h3>Our Design</h3>
 
-        <div class="sketchfab-embed-wrapper"> <iframe title="cart2" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/3ecc7982553d4d4db970b6fe57b41ded/embed?ui_theme=dark"> </iframe> 
+        <div class="sketchfab-embed-wrapper" style="width: 80%; margin: 0 auto;">
+                <iframe title="cart2" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share style="width: 100%; height: 500px;" src="https://sketchfab.com/models/3ecc7982553d4d4db970b6fe57b41ded/embed?autospin=1&autostart=1"> </iframe> 
                 <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
                         <a href="https://sketchfab.com/3d-models/cart2-3ecc7982553d4d4db970b6fe57b41ded" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Data-Aqcuisition Cart </a> by 
                         <a href="https://sketchfab.com/ajisakarayhan" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> ajisakarayhan </a> on 
