--- a/plantw.html
+++ b/plantw.html
@@ -16,7 +16,7 @@
 
 <body class="blue bottom">
         
-        <div class="title">
+        <div class="atasan">
                 <a href="index.html">Back to main page</a>  
                 <h1>Self-Watering Plant System</h1>
 
