--- a/Capstone.html
+++ b/Capstone.html
@@ -16,7 +16,7 @@
 
 <body class="blue bottom">
         
-        <div class="title">
+        <div class="atasan">
                 <a href="index.html">Back to main page</a>  
                 <h1>E-Bike Pedal Assist Conversion Kit</h1>
                 <p>As my Capstone project, my team was sponsored by VME, often known as Volunteers of Medical Engineering, and were assigned a young client with spinalve is to i disability. The objective is to convert our client's personalized trike, which was created by the previous capstone team, and implement a motor-assisted pedal.</p>
