--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
         <p><b>Technical:</b> C/C++, CAD, Microcontrollers, SOLIDWORKS,  Creo Parametric, Autodesk Inventor, MATLAB, MS Office</p>
         <p><b>Soft skills:</b> Communication, Problem-solving, Adaptability, Leadership, Time management, Teamwork, Creativity, Critical thinking, Emotional intelligence, Conflict resolution, Interpersonal skills</p>
         
-        <p>Interested? Click<a href="mailto: ajisakarayhan@gmail.com?subject = Feedback&body = Message">here</a></p>
+        <p>Further questions could be sent<a href="mailto: ajisakarayhan@gmail.com?subject = Feedback&body = Message">here</a></p>
 
 
         <section class="blue"></section>
