--- a/400.html
+++ b/400.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
 </head>
 
-<body class="blue bottom">
+<body>
         
         <div class="title">
                 <a href="index.html">Back to main page</a>  
@@ -42,4 +42,5 @@
 
         <section class="bottom"></section>
     </body>
+</html>
 
