--- a/400.html
+++ b/400.html
@@ -16,7 +16,7 @@
 
 <body>
         
-        <div class="title">
+        <div class="atasan">
                 <a href="index.html">Back to main page</a>  
                 <h1>Motorized Data-Aqcuisiton Cart</h1>
                 <p>As a project for my Machine Design course, I was tasked to design a motorized data-aqcuisition cart. Since the design should consider any surfaces such as the moon, some specifications are restricted thus bringing the best out of each teams' creativity. My team, includes Andrew Romero, Ben Fong, and Bryan Roeper proposed such design.</p>
