--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h2>Projects</h2>
       <a href="Capstone.html">My Capstone Project</a>
       <a href="chipset.html">Smartphone Chipset Deconstruction</a>
-      <a href="400.html">Motorized Data-Aqcuisition cart</a>
+      <a href="mobil.html">Motorized Data-Aqcuisition cart</a>
       <a href="plantw.html">Self-Watering Plant System</a>
       <a href="web.html">This Website</a>
     </section>
