--- a/chipset.html
+++ b/chipset.html
@@ -24,7 +24,7 @@
     
             </div>
     
-    <section class="blue"> 
+    <section class="hitam"> 
         <h3>Disassembly</h3>
 
         <p><img src="firstd.JPG" alt="firstd" width="50%" margin-left="30%"></p>
