--- a/mobil.html
+++ b/mobil.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
 </head>
 
-<body class="blue bottom">
+<body class="hitam bottom">
         
         <div class="atasan">
                 <a href="index.html">Back to main page</a>  
@@ -39,8 +39,6 @@
         <p>Although due to complexity and the lack of time available in a semester, we did not get to visualize our design with a prototype. It was a challenging yet fun project and I personally believe it would be better if the students have 2 semesters working on this project for prototype development.</p>
        
         <h4>Check out our presentation<a href="https://docs.google.com/presentation/d/1PF3DHm_vJGWYNlnigS5PmZhzlDjjDz0h/edit#slide=id.p1">here</a>!</h4>
-
-        <section class="bottom"></section>
     </body>
 </html>
 
