--- a/web.html
+++ b/web.html
@@ -14,8 +14,8 @@
         <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
     </head>
 
-    <body class="blue bottom">
-        <div class="title">
+    <body class="hitam bottom">
+        <div class="atasan">
         <a href="index.html">Back to main page</a>  
         <h1>My Online Portfolio</h1>
         </div>
