--- a/chipset.html
+++ b/chipset.html
@@ -35,7 +35,7 @@
     
             </div>
     
-    <section class="hitam"> 
+    <section class="blue"> 
         <h3>Exynos 7420</h3>
 
         <p><img src="crossd.JPG" alt="crossd" width="50%%" margin-left="30%"></p>
