--- a/default.html
+++ b/default.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
     </head>
 
-    <body class="hitam bottom">
+    <body class="blue bottom">
         <div class="title">
         <a href="index.html">Back to main page</a>  
         <h1>Title</h1>
