--- a/mobil.html
+++ b/mobil.html
@@ -16,12 +16,10 @@
 
 <body class="blue bottom">
         
-        <div class="atasan">
                 <a href="index.html">Back to main page</a>  
                 <h1>Motorized Data-Aqcuisiton Cart</h1>
                 <p>As a project for my Machine Design course, I was tasked to design a motorized data-aqcuisition cart. Since the design should consider any surfaces such as the moon, some specifications are restricted thus bringing the best out of each teams' creativity. My team, includes Andrew Romero, Ben Fong, and Bryan Roeper proposed such design.</p>
                 <p>Such specifications are minimum and maximum speed of 0.1 m/s and 1 m/s. It must be purely mechanical meaning no controller is allowed, and we were also given weight and cost limit. </p>
-        </div>
 
         <h3>Our Design</h3>
 
@@ -39,6 +37,7 @@
         <p>Although due to complexity and the lack of time available in a semester, we did not get to visualize our design with a prototype. It was a challenging yet fun project and I personally believe it would be better if the students have 2 semesters working on this project for prototype development.</p>
        
         <h4>Check out our presentation<a href="https://docs.google.com/presentation/d/1PF3DHm_vJGWYNlnigS5PmZhzlDjjDz0h/edit#slide=id.p1">here</a>!</h4>
+        <section class="blue"></section>
     </body>
 </html>
 
