--- a/Capstone.html
+++ b/Capstone.html
@@ -58,7 +58,8 @@
 
         <h3>Why Arduino?</h3>
 
-        <p>Engineering students are widely familiar with Arduino Uno, it is a simple microcontroller to program and calculate any desired input as we have used it many times for our projects. With our given budget, could have easily gotten a better controller and it might have been easier to navigate. However, we took this project as a challenge to implement what we have learned from our classes and to show young individuals, specifically our client, that they too could impact the future lives by having the curiousity to learn.</p>
+        <p>Engineering students are widely familiar with Arduino Uno, it is a simple microcontroller to program and calculate any desired input as we have used it many times for our projects. With our given budget, could have easily gotten a better controller and it might have been easier to navigate.</p>
+        <p>However, we took this project as a challenge to implement what we have learned from our classes and to show young individuals, specifically our client, that they too could impact the future lives by having the curiousity to learn.</p>
 
         <h3>Impact and Learning Experience</h3>
 
