--- a/web.html
+++ b/web.html
@@ -19,7 +19,7 @@
         <a href="index.html">Back to main page</a>  
         <h1>My Online Portfolio</h1>
         </div>
-        <p>I created this portfolio to help describe me more as a person and showcase some of the amazing projects I had the experience to work with. I believe an online porfolio is necessary for any young individuals pursuing a career specifically in STEM, it is also a great way to demonstrate one's skills and knowledge for technical abilities.</p>
+        <p>I created this portfolio to help describe me more as a person and showcase some of the amazing projects I had the experience to work on. I believe an online porfolio is necessary for any young individuals pursuing a career specifically in STEM, it is also a great way to demonstrate one's skills and knowledge for technical abilities.</p>
         <!--Spacer-->
         <p>&nbsp;</p>
         <p>&nbsp;</p>
