--- a/Capstone.html
+++ b/Capstone.html
@@ -33,7 +33,7 @@
         </div>
 
 
-        <p><img src="cdiagram.JPG" alt="cdiagram" width="45%" margin-left="30%"></p>
+        <p><img src="cdiagram.jpg" alt="cdiagram" width="45%" margin-left="30%"></p>
 
         <p>I created a Circuit Diagram to better help explain the electrical subsystem of our solution. We would read user's input force on the pedal using torque sensor directly to Arduino Uno R3, which then would calculate just the right amount of force needed to assist user without reducing their efforts.</p>
         <p>Arduino would send the value to Motor Controller to dictate how much energy the motor should produce before assisting back to the pedal. The system is also equipped with Hall/Magnetic sensor located on the brake lever. The purpose is to shut the motor completely once brake lever is triggered to prevent the motor from continuously accelerating when not needed.</p>
