--- a/Capstone.html
+++ b/Capstone.html
@@ -33,6 +33,8 @@
         </div>
 
 
+        <p>Programmed using C++ to determine the torque threshold, our final prototype were able to produce 32% less torque input required on the pedal with 10 N-m as torque threshold.</p>
+
         <p><img src="cdiagram.jpg" alt="cdiagram" width="45%" margin-left="30%"></p>
 
         <p>I created a Circuit Diagram to better help explain the electrical subsystem of our solution. We would read user's input force on the pedal using torque sensor directly to Arduino Uno R3, which then would calculate just the right amount of force needed to assist user without reducing their efforts.</p>
