--- a/mobil.html
+++ b/mobil.html
@@ -18,9 +18,9 @@
         
                 <a href="index.html">Back to main page</a>  
                 <h1>Motorized Data-Aqcuisiton Cart</h1>
-                <p>As a project for my Machine Design course, I was tasked to design a motorized data-aqcuisition cart. Since the design should consider any surfaces such as the moon, some specifications are restricted thus bringing the best out of each teams' creativity. My team, includes Andrew Romero, Ben Fong, and Bryan Roeper proposed such design.</p>
+                <p>As a project for my Machine Design course, I was tasked to design a 4-wheel front driving system to collect data in increments at designated set of speed, considering both cost and materials. My team, includes Andrew Romero, Ben Fong, and Bryan Roeper  were able to proposed such design.</p>
                 <p><img src="cartd.JPG" alt="firstd" width="33%" margin-left="30%"></p>
-                <p>Such specifications are minimum and maximum speed of 0.1 m/s and 1 m/s. It must be purely mechanical meaning no controller is allowed, and we were also given weight and cost limit. </p>
+                <p>Such specifications are minimum and maximum speed of 0.1 m/s and 1 m/s. It must be purely mechanical meaning no controller is allowed, and we were also given weight and cost limit.</p>
 
         <h3>Our Design</h3>
 
@@ -33,7 +33,7 @@
                 </p>
         </div>
 
-        <p>We came up with a design consists of 2 motors, 2 gearboxes, 4 individual drive axles and 4 belts driven.</p>
+        <p>We came up with a design consists of 2 motors, 2 gearboxes, 4 individual drive axles and 4 belts driven. We also calculated the shaft design reacting forces, shaft speed, distortion energy, bearing and drivetrain analysis to determine minimum lifetime.</p>
 
         <p>Although due to complexity and the lack of time available in a semester, we did not get to visualize our design with a prototype. It was a challenging yet fun project and I personally believe it would be better if the students have 2 semesters working on this project for prototype development.</p>
        
