--- a/mobil.html
+++ b/mobil.html
@@ -35,7 +35,7 @@
 
         <p>We came up with a design consists of 2 motors, 2 gearboxes, 4 individual drive axles and 4 belts driven. We also calculated the shaft design reacting forces, shaft speed, distortion energy, bearing and drivetrain analysis to determine minimum lifetime.</p>
 
-        <p>Due to complexity and the lack of time available in a semester, we did not get to visualize our design with a prototype. It was a challenging yet fun project and I personally believe it would be better if the students have 2 semesters working on this project for prototype development.</p>
+        <p>Due to complexity and the lack of time available in a semester, we did not get to visualize our design with a prototype. However, it was a challenging yet fun project and I personally believe it would be better if the students have 2 semesters working on this project for prototype development.</p>
        
         <h4>Check out our presentation<a href="https://docs.google.com/presentation/d/1PF3DHm_vJGWYNlnigS5PmZhzlDjjDz0h/edit#slide=id.p1">here</a>!</h4>
         <section class="blue"></section>
